# snapname

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
launchd/: com.snapname.watcher.example.plist
snapname/: __init__.py  __main__.py  config.py  images.py  naming.py  watcher.py
tests/: test_describe_image_slug.py  test_images.py  test_naming_helpers.py  test_vision_image_size.py  test_watcher_stable.py
