[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "snapname"
version = "0.1.0"
description = "Watch a folder and rename screenshots using a vision model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "watchdog>=4.0.0",
    "anthropic>=0.40.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
snapname = "snapname.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["snapname*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
